[gd_scene load_steps=27 format=3 uid="uid://ced6li08ssu8o"]

[ext_resource type="Script" path="res://Objects/Entity/Character/Character.gd" id="1_70khu"]
[ext_resource type="Texture2D" uid="uid://co1xdjjcr7nwm" path="res://Assets/jessesans.jpg" id="2_ufpbp"]
[ext_resource type="PackedScene" uid="uid://bwsp4odghqbcv" path="res://Objects/UI/HealthBar/HealthBar.tscn" id="3_ji2kw"]
[ext_resource type="Theme" uid="uid://beyjrh481pkj4" path="res://LabelBackgroundTheme.tres" id="4_r3t6d"]
[ext_resource type="PackedScene" uid="uid://b0vxsub54aedm" path="res://Objects/UI/InventoryGrid/InventoryGrid.tscn" id="5_62rkv"]
[ext_resource type="Script" path="res://Objects/Entity/Character/DebugLabel.gd" id="5_djjja"]
[ext_resource type="Resource" uid="uid://4c51nw2gssmx" path="res://Items/Weapons/SwordItem.tres" id="6_nnqtj"]
[ext_resource type="Resource" uid="uid://3mm8fpyercst" path="res://Items/Weapons/HammerItem.tres" id="7_wufio"]
[ext_resource type="PackedScene" uid="uid://bku7s3gdgpwmb" path="res://Objects/Hurtbox/Hurtbox.tscn" id="7_yp4o6"]
[ext_resource type="Resource" uid="uid://broxhyhw27lkl" path="res://Items/Modifiers/A/LaserModifierItem.tres" id="8_oydgb"]
[ext_resource type="Script" path="res://Objects/Entity/Character/CharacterStateMachine.gd" id="9_4emhb"]
[ext_resource type="Script" path="res://Objects/Inventory/InventoryResource.gd" id="11_xjos7"]

[sub_resource type="Resource" id="Resource_xpdph"]
script = ExtResource("11_xjos7")
items = Array[Resource("res://Objects/Item/Item.gd")]([ExtResource("6_nnqtj"), ExtResource("7_wufio"), ExtResource("8_oydgb"), null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])
columns = 10

[sub_resource type="Resource" id="Resource_i0fmo"]
script = ExtResource("11_xjos7")
items = Array[Resource("res://Objects/Item/Item.gd")]([null])
columns = 1

[sub_resource type="Resource" id="Resource_mfmkk"]
script = ExtResource("11_xjos7")
items = Array[Resource("res://Objects/Item/Item.gd")]([null])
columns = 1

[sub_resource type="Resource" id="Resource_lba8p"]
script = ExtResource("11_xjos7")
items = Array[Resource("res://Objects/Item/Item.gd")]([null])
columns = 1

[sub_resource type="Animation" id="11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="9"]
resource_name = "death"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="10"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1gul"]
_data = {
"RESET": SubResource("11"),
"death": SubResource("9"),
"hurt": SubResource("10")
}

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="12"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="8"]
resource_name = "death"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="4"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InvincibilityTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wc6y"]
_data = {
"RESET": SubResource("7"),
"death": SubResource("8"),
"hurt": SubResource("4")
}

[node name="Character" type="CharacterBody2D" groups=["characters"]]
collision_layer = 4161
collision_mask = 8
motion_mode = 1
script = ExtResource("1_70khu")
dash_cooldown = 0.5
dash_time = 0.2
i_frames = 0.5

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UILayer" instance=ExtResource("3_ji2kw")]
visible = false
z_index = -1
offset_right = 615.0
offset_bottom = 617.0
scale = Vector2(0.743549, 0.050791)

[node name="DebugLabel" type="Label" parent="UILayer"]
visible = false
offset_right = 21.0
offset_bottom = 43.0
theme = ExtResource("4_r3t6d")
script = ExtResource("5_djjja")

[node name="InventoryGrid" parent="UILayer" instance=ExtResource("5_62rkv")]
visible = false
offset_left = 600.0
offset_top = 208.0
offset_right = -16.0
offset_bottom = -88.0
r = 10
c = 10
inventory = SubResource("Resource_xpdph")
pickup_target = true

[node name="EquipSlots" type="GridContainer" parent="UILayer"]
offset_top = 88.0
offset_right = 40.0
offset_bottom = 224.0

[node name="EquipWeapon" parent="UILayer/EquipSlots" instance=ExtResource("5_62rkv")]
layout_mode = 2
tooltip_text = "Weapons"
allow_category = Array[String](["Weapon"])
r = 1
c = 1
inventory = SubResource("Resource_i0fmo")

[node name="EquipA" parent="UILayer/EquipSlots" instance=ExtResource("5_62rkv")]
layout_mode = 2
tooltip_text = "A Modifiers"
allow_category = Array[String](["A"])
r = 1
c = 1
inventory = SubResource("Resource_mfmkk")

[node name="EquipB" parent="UILayer/EquipSlots" instance=ExtResource("5_62rkv")]
layout_mode = 2
tooltip_text = "A Modifiers"
allow_category = Array[String](["B"])
r = 1
c = 1
inventory = SubResource("Resource_lba8p")

[node name="Camera" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(5.68434e-14, 0)
scale = Vector2(0.0514469, 0.0523732)
texture = ExtResource("2_ufpbp")

[node name="SpriteEffectPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_d1gul")
}

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("1")
debug_color = Color(0, 1, 1, 0.419608)

[node name="DashCooldownTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="InDashTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="Hurtbox" parent="." groups=["character hurtboxes"] instance=ExtResource("7_yp4o6")]
modulate = Color(1, 1, 1, 1)
collision_layer = 260
collision_mask = 1040

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("12")
debug_color = Color(0, 1, 0, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
libraries = {
"": SubResource("AnimationLibrary_4wc6y")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("9_4emhb")

[node name="InvincibilityTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="DashCooldownTimer" to="." method="set" binds= ["dash_in_cooldown", false]]
[connection signal="timeout" from="InDashTimer" to="." method="set" binds= ["in_dash", false]]
[connection signal="area_entered" from="Hurtbox" to="StateMachine" method="_on_CharacterHurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_CharacterAnimationPlayer_animation_finished"]
[connection signal="timeout" from="InvincibilityTimer" to="StateMachine" method="_on_InvincibilityTimer_timeout"]

[editable path="Hurtbox"]
